// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. article list 1`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          <Pagination
            hideResults={false}
            pageSize={10}
          />
        </div>
      </div>
    </div>
    <div
      accessibility-label="d98c257c-cb16-11e7-b529-95e3fc05f40f.0"
      id="d98c257c-cb16-11e7-b529-95e3fc05f40f.0"
    >
      <div>
        <Link
          url="https://www.thetimes.co.uk/article/this-is-slug-1-968n7tdck1"
        >
          <div>
            <Card
              fadeImageIn={true}
              highResSize={null}
              imageRatio={1}
              imageUri="https://lead1.io"
              isLoading={false}
              lowResSize={100}
              showImage={true}
            >
              <div>
                <ArticleSummary
                  bylineProps={null}
                  datePublicationProps={
                    Object {
                      "date": "2017-11-17T00:01:00.000Z",
                      "publication": "TIMES",
                    }
                  }
                  labelProps={
                    Object {
                      "color": "#636C17",
                      "isVideo": true,
                      "title": "Label 1",
                    }
                  }
                />
              </div>
            </Card>
          </div>
        </Link>
      </div>
    </div>
    <div
      accessibility-label="4e6894ec-cb18-11e7-b529-95e3fc05f40f.1"
      id="4e6894ec-cb18-11e7-b529-95e3fc05f40f.1"
    >
      <div>
        <div>
          <div />
        </div>
        <Link
          url="https://www.thetimes.co.uk/article/this-is-slug-2-968n7tdck2"
        >
          <div>
            <Card
              fadeImageIn={true}
              highResSize={null}
              imageRatio={1}
              imageUri="https://lead2.io"
              isLoading={false}
              lowResSize={100}
              showImage={true}
            >
              <div>
                <ArticleSummary
                  bylineProps={
                    Object {
                      "ast": Array [
                        Object {
                          "attributes": Object {},
                          "children": Array [
                            Object {
                              "attributes": Object {
                                "value": "Byline 2",
                              },
                              "children": Array [],
                              "name": "text",
                            },
                          ],
                          "name": "paragraph",
                        },
                      ],
                      "color": "#333333",
                    }
                  }
                  datePublicationProps={
                    Object {
                      "date": "2017-11-17T00:01:00.000Z",
                      "publication": "SUNDAYTIMES",
                    }
                  }
                  labelProps={
                    Object {
                      "color": "#333333",
                      "isVideo": false,
                      "title": "Label 2",
                    }
                  }
                />
              </div>
            </Card>
          </div>
        </Link>
      </div>
    </div>
    <div
      accessibility-label="ca003c2a-8e6f-11e8-9eb6-529269fb1459.2"
      id="ca003c2a-8e6f-11e8-9eb6-529269fb1459.2"
    >
      <div>
        <div>
          <div />
        </div>
        <Link
          url="https://www.thetimes.co.uk/article/this-is-slug-3-968n7tdck3"
        >
          <div>
            <Card
              fadeImageIn={true}
              highResSize={null}
              imageRatio={1}
              imageUri="https://lead3.io"
              isLoading={false}
              lowResSize={100}
              showImage={true}
            >
              <div>
                <ArticleSummary
                  bylineProps={
                    Object {
                      "ast": Array [
                        Object {
                          "attributes": Object {},
                          "children": Array [
                            Object {
                              "attributes": Object {
                                "value": "Byline 3",
                              },
                              "children": Array [],
                              "name": "text",
                            },
                          ],
                          "name": "paragraph",
                        },
                      ],
                      "color": "#333333",
                    }
                  }
                  datePublicationProps={
                    Object {
                      "date": "2017-11-17T00:01:00.000Z",
                      "publication": "SUNDAYTIMES",
                    }
                  }
                  labelProps={
                    Object {
                      "color": "#333333",
                      "isVideo": false,
                      "title": "Label 3",
                    }
                  }
                />
              </div>
            </Card>
          </div>
        </Link>
      </div>
    </div>
    <div
      accessibility-label="ca003fe0-8e6f-11e8-9eb6-529269fb1459.3"
      id="ca003fe0-8e6f-11e8-9eb6-529269fb1459.3"
    >
      <div>
        <div>
          <div />
        </div>
        <Link
          url="https://www.thetimes.co.uk/article/this-is-slug-4-968n7tdck4"
        >
          <div>
            <Card
              fadeImageIn={true}
              highResSize={null}
              imageRatio={1}
              imageUri="https://lead4.io"
              isLoading={false}
              lowResSize={100}
              showImage={true}
            >
              <div>
                <ArticleSummary
                  bylineProps={
                    Object {
                      "ast": Array [
                        Object {
                          "attributes": Object {},
                          "children": Array [
                            Object {
                              "attributes": Object {
                                "value": "Byline 4",
                              },
                              "children": Array [],
                              "name": "text",
                            },
                          ],
                          "name": "paragraph",
                        },
                      ],
                      "color": "#333333",
                    }
                  }
                  datePublicationProps={
                    Object {
                      "date": "2017-11-17T00:01:00.000Z",
                      "publication": "SUNDAYTIMES",
                    }
                  }
                  labelProps={
                    Object {
                      "color": "#333333",
                      "isVideo": false,
                      "title": "Label 4",
                    }
                  }
                />
              </div>
            </Card>
          </div>
        </Link>
      </div>
    </div>
    <div
      accessibility-label="ca00422e-8e6f-11e8-9eb6-529269fb1459.4"
      id="ca00422e-8e6f-11e8-9eb6-529269fb1459.4"
    >
      <div>
        <div>
          <div />
        </div>
        <Link
          url="https://www.thetimes.co.uk/article/this-is-slug-5-968n7tdck5"
        >
          <div>
            <Card
              fadeImageIn={true}
              highResSize={null}
              imageRatio={1}
              imageUri="https://lead5.io"
              isLoading={false}
              lowResSize={100}
              showImage={true}
            >
              <div>
                <ArticleSummary
                  bylineProps={
                    Object {
                      "ast": Array [
                        Object {
                          "attributes": Object {},
                          "children": Array [
                            Object {
                              "attributes": Object {
                                "value": "Byline 5",
                              },
                              "children": Array [],
                              "name": "text",
                            },
                          ],
                          "name": "paragraph",
                        },
                      ],
                      "color": "#333333",
                    }
                  }
                  datePublicationProps={
                    Object {
                      "date": "2017-11-17T00:01:00.000Z",
                      "publication": "SUNDAYTIMES",
                    }
                  }
                  labelProps={
                    Object {
                      "color": "#333333",
                      "isVideo": false,
                      "title": "Label 5",
                    }
                  }
                />
              </div>
            </Card>
          </div>
        </Link>
      </div>
    </div>
    <Ad
      slotName="inline-ad"
    />
    <div>
      <div>
        <Pagination
          hideResults={true}
          pageSize={10}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`2. article list with no images 1`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          <Pagination
            hideResults={false}
            pageSize={3}
          />
        </div>
      </div>
    </div>
    <div
      accessibility-label="d98c257c-cb16-11e7-b529-95e3fc05f40f.0"
      id="d98c257c-cb16-11e7-b529-95e3fc05f40f.0"
    >
      <div>
        <Link
          url="https://www.thetimes.co.uk/article/this-is-slug-1-968n7tdck1"
        >
          <div>
            <Card
              fadeImageIn={true}
              highResSize={null}
              imageRatio={1}
              imageUri="https://lead1.io"
              isLoading={false}
              lowResSize={100}
              showImage={false}
            >
              <div>
                <div>
                  <ArticleSummary
                    bylineProps={null}
                    datePublicationProps={
                      Object {
                        "date": "2017-11-17T00:01:00.000Z",
                        "publication": "TIMES",
                      }
                    }
                    labelProps={
                      Object {
                        "color": "#636C17",
                        "isVideo": true,
                        "title": "Label 1",
                      }
                    }
                  />
                </div>
                <div>
                  <ArticleSummary
                    bylineProps={null}
                    datePublicationProps={
                      Object {
                        "date": "2017-11-17T00:01:00.000Z",
                        "publication": "TIMES",
                      }
                    }
                    labelProps={
                      Object {
                        "color": "#636C17",
                        "isVideo": true,
                        "title": "Label 1",
                      }
                    }
                  />
                </div>
              </div>
            </Card>
          </div>
        </Link>
      </div>
    </div>
    <div>
      <div>
        <Pagination
          hideResults={true}
          pageSize={3}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`3. article list with missing image 1`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          <Pagination
            hideResults={false}
            pageSize={3}
          />
        </div>
      </div>
    </div>
    <div
      accessibility-label="d98c257c-cb16-11e7-b529-95e3fc05f40f.0"
      id="d98c257c-cb16-11e7-b529-95e3fc05f40f.0"
    >
      <div>
        <Link
          url="https://www.thetimes.co.uk/article/this-is-slug-1-968n7tdck1"
        >
          <div>
            <Card
              fadeImageIn={true}
              highResSize={null}
              imageRatio={1}
              imageUri={null}
              isLoading={false}
              lowResSize={100}
              showImage={false}
            >
              <div>
                <div>
                  <ArticleSummary
                    bylineProps={null}
                    datePublicationProps={
                      Object {
                        "date": "2017-11-17T00:01:00.000Z",
                        "publication": "TIMES",
                      }
                    }
                    labelProps={
                      Object {
                        "color": "#636C17",
                        "isVideo": true,
                        "title": "Label 1",
                      }
                    }
                  />
                </div>
                <div>
                  <ArticleSummary
                    bylineProps={null}
                    datePublicationProps={
                      Object {
                        "date": "2017-11-17T00:01:00.000Z",
                        "publication": "TIMES",
                      }
                    }
                    labelProps={
                      Object {
                        "color": "#636C17",
                        "isVideo": true,
                        "title": "Label 1",
                      }
                    }
                  />
                </div>
              </div>
            </Card>
          </div>
        </Link>
      </div>
    </div>
    <div>
      <div>
        <Pagination
          hideResults={true}
          pageSize={3}
        />
      </div>
    </div>
  </div>
</div>
`;
